--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 	<!-- FontAwesome -->
     <link href="http://www.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
+    <!-- jQuery -->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="assets/js/myjQuery.js"></script>
+
     <!-- google visualization:pie-chart-->
      <script type="text/javascript" src="https://www.google.com/jsapi"></script>
      <script type="text/javascript">
@@ -41,11 +45,43 @@
           fontName:'Roboto',
           chartArea:{left:20,top:10,width:'100%',height:'80%'},
           backgroundColor:'none',
+          legend: {position: 'right'}
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('piechart'));
         chart.draw(data, options);
       }
+    </script>
+
+     <script type="text/javascript">
+      google.load('visualization', '1', {packages: ['corechart']});
+    </script>
+    <script type="text/javascript">
+      function drawVisualization() {
+        // Some raw data (not necessarily accurate)
+         var data = google.visualization.arrayToDataTable([
+          ['Month', 'Education', 'Food', 'Entertainment', 'Transportation'],
+          ['April 2014',  41,      204,         33,             162],
+          ['May 2014',  13,      178,        69,             26.8],
+          ['Juno 2014',  57.98,      198,        57,             64.7]
+        ]);
+
+        var options = {
+          title : 'Expenses last three months',
+          vAxis: {title: "Expenses in €"},
+          hAxis: {title: "Month"},
+          seriesType: "bars",
+          series: {3: {type: "line"}},
+          colors:['#D95246','#2A2931','#53798D','#344E5B'],
+          fontName:'Roboto',
+          backgroundColor:'none',
+          legend: {position: 'right'},
+          chartArea:{left:20,top:10,width:'70%',height:'80%'}
+        };
+        var chart = new google.visualization.ComboChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+      google.setOnLoadCallback(drawVisualization);
     </script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -73,7 +109,7 @@
 	<div class="container">
 		<div class="row mt">
 			<div class="col-lg-6 col-lg-offset-3">
-				<div class="boxed" >
+				<div class="boxed" id="budgetOverview" >
 					<div class="row">
 					</div>
 					<h1>Daily Budget</h1>
@@ -111,9 +147,15 @@
 				<div class="boxed">
 				<h1>Monthly Budget</h1>
 				<div id="piechart"></div>
-				
-					
-</html>
+				</div>
+			</div>
+		</div><!-- /row -->
+
+		<div class="row mt">
+			<div class="col-lg-6 col-lg-offset-3">
+				<div class="boxed">
+				<h1>Period Balance</h1>
+				<div id="chart_div"></div>
 				</div>
 			</div>
 		</div><!-- /row -->
