--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 	<!-- FOOTER -->
 	<div data-role="footer" id="footer" class="navbar-default">
 		<ul class="nav">
-			<li><a href="#pageOverview"><i class="fa fa-bar-chart-o fa-2x"></i> <br> Overview </a></li>
-			<li><a href="#pageCategories" data-transition="slidedown"><i class="fa fa-tags fa-2x"></i> <br> Categories </a></li>
-			<li><a href="#pageBudgets"><i class="fa fa-money fa-2x"></i> <br> Budgets </a></li>
-			<li><a href="#pageAdvice"><i class="fa fa-lightbulb-o fa-2x"></i> <br> Advice </a></li>
+			<li><a href="#pageOverview" class="navlink activeSite" ><i class="fa fa-bar-chart-o fa-2x"></i> <br> Overview </a></li>
+			<li><a href="#pageCategories" class="navlink"><i class="fa fa-tags fa-2x"></i> <br> Categories </a></li>
+			<li><a href="#pageBudgets" class="navlink" ><i class="fa fa-money fa-2x"></i> <br> Budgets </a></li>
+			<li><a href="#pageAdvice" class="navlink" ><i class="fa fa-lightbulb-o fa-2x"></i> <br> Advice </a></li>
 		</ul>
 	</div><!-- /footer -->
 
