--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 	<script type="text/javascript" src="assets/js/categories.js"></script>
 
 	<!-- jQuery -->
-  	<script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+  	<script src="assets/js/jquery.mobile.min.js"></script>
   	<script type="text/javascript" src="assets/js/myjQuery.js"></script>
 
 </head>
 
 <body>
-	<div class="container" data-role="page" id="pageOverview">
+	<div class="container page" id="pageOverview">
 
 		<div data-role="main" class="ui-content">
 			<div class="boxed">
@@ -98,7 +98,7 @@
 		</div>
 	</div> <!-- end of page Overview -->
 
-	<div class="container" data-role="page" id="pageCategories"><!-- page Categories -->
+	<div class="container page" id="pageCategories"><!-- page Categories -->
 
 		<!-- Categories -->
 		<div data-role="main" class="ui-content">
@@ -211,12 +211,20 @@
 	</div> <!-- end of page Categories -->
 
 
-	<div class="container" data-role="page" id="pageBudgets"><!-- page Budgets -->
+	<div class="container page" id="pageBudgets"><!-- page Budgets -->
 
 	</div>
 
-	<div class="container" data-role="page" data-dialog="true" id="pageAdvice"><!-- page Advice -->
+	<div class="container page activePage" id="pageAdvice"><!-- page Advice -->
+		<div data-role="main" class="ui-content">
+			<div class="boxed">
+				<h1> Der Butler rät:</h1>
+			</div>
 
+			<div id="logobig">
+				<img class="pull-right" src="assets/img/logo_white.png" alt="Logo">
+			</div>
+		</div>
 	</div>
 
 	<!-- HEADER -->
@@ -236,7 +244,7 @@
 			<li><a href="#pageOverview" class="navlink activeSite" ><i class="fa fa-bar-chart-o fa-2x"></i> <br> Overview </a></li>
 			<li><a href="#pageCategories" class="navlink"><i class="fa fa-tags fa-2x"></i> <br> Categories </a></li>
 			<li><a href="#pageBudgets" class="navlink" ><i class="fa fa-money fa-2x"></i> <br> Budgets </a></li>
-			<li><a href="#pageAdvice" class="navlink" ><i class="fa fa-lightbulb-o fa-2x"></i> <br> Advice </a></li>
+			<li><a href="#pageAdvice" class="navlink"><i class="fa fa-lightbulb-o fa-2x"></i> <br> Advice </a></li>
 		</ul>
 	</div><!-- /footer -->
 
