--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 	<meta name="author" content="">
 	<link rel="shortcut icon" href="assets/img/favicon.png">
 
+	<!-- full screen toggle -->
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+	<script type='text/javascript' charset='utf-8'>
+	    // Hides mobile browser's address bar when page is done loading.
+	      window.addEventListener('load', function(e) {
+	        setTimeout(function() { window.scrollTo(0, 1); }, 1);
+	      }, false);
+	</script>
+
 	<title>Budget Butler</title>
 
 	<!-- Bootstrap core CSS -->
