--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   	<!-- Bootstrap core JavaScript
   	================================================== -->
   	<!-- Placed at the end of the document so the pages load faster NOT^^-->
-  	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  	<script src="assets/js/bootstrap.min.js"></script>
   	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  	<script src="assets/js/bootstrap.min.js"></script> 	
 
 	<!-- Custom styles for this template -->
 	<link href="assets/css/main.css" rel="stylesheet">
@@ -44,9 +44,11 @@
 	<script type="text/javascript" src="assets/js/googleVisualisation.js"></script>
 
 	<!-- our scripts -->
-	<script type="text/javascript" src="assets/js/categories.js"></script>
+	<script type="text/javascript" src="assets/js/categories.js"></script>	
+	<script type="text/javascript" src="assets/js/advice.js"></script>
+	<script type="text/javascript" src="assets/js/modals.js"></script>		
 
-	<!-- jQuery -->
+	<!-- jQuery -->	
   	<script src="assets/js/jquery.mobile.min.js"></script>
   	<script type="text/javascript" src="assets/js/myjQuery.js"></script>
 
@@ -59,49 +61,25 @@
 			<div class="boxed flying">
 				<div id="budget-tabs">
 					<ul>
-						<li onClick=toDaily()><a href="#" title="daily" id="daily" class="activeOverview">DAY</a></li>
-						<li onclick=toMonthly()><a href="#" title="monthly" id="monthly">MONTH</a></li>
+						<li onClick=toDaily()><a href="#" title="daily" id="daily">DAY</a></li>
+						<li onclick=toMonthly()><a href="#" title="monthly" id="monthly" class="activeOverview">MONTH</a></li>
 						<li onclick=toPeriod()><a href="#" title="periodly" id="periodly">PERIOD</a></li>
 					</ul>
 				</div>
-				<div id="dailyOverview">
-					<h2>your daily Budget on</h2>
+				<div id="dailyOverview" style="display:none">
+					<div id="visualization"></div>
+				</div>	
 
-					<div class="progress">
-						<div class="progress-bar progress-bar-black" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-							<span class="">40€</span>
-						</div>
-					</div>
-
-					<div class="progress">
-						<div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-							<span class="">20€</span>
-						</div>
-					</div>
-
-					<div class="progress">
-						<div class="progress-bar progress-bar-lightblue" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-							<span class="">60€</span>
-						</div>
-					</div>
-
-					<div class="progress">
-						<div class="progress-bar progress-bar-darkblue" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-							<span class="">80€</span>
-						</div>
-					</div>
-				</div>
-
-				<div id="monthlyOverview" hidden>
+				<div id="monthlyOverview" >
 					<div id="piechart"></div>
 				</div>	
 
-				<div id="periodOverview" hidden>
+				<div id="periodOverview" style="display:none">
 					<div id="chart_div"></div>
 				</div>	
 			</div>
 
-			<button type="button" class="btn btn-primary btn-lg btn-block flying">NEW ENTRY</button>
+			<button type="button" class="btn btn-primary btn-lg btn-block flying" data-toggle="modal" data-target="#addExpenseModal">ADD NEW EXPENSE</button>
 		</div>
 	</div> <!-- end of page Overview -->
 
@@ -208,15 +186,9 @@
 			</div>
 		</div>
 
+		<button type="button" class="btn btn-primary btn-lg btn-block flying" data-toggle="modal" data-target="#addCategoryModal">ADD NEW CATEGORY</button>
+		
 
-		<script>
-			$(document).ready(function(){
-  				$("#newExpenseEntry").focus(function(){
-    			$("#addbutton").css("display","block");
-  			});
-		});
-
-		</script>
 		<!-- Categories -->	
 
 	</div> <!-- end of page Categories -->
@@ -233,34 +205,150 @@
 	 			<img class="pull-right" src="assets/img/logo_black.png" alt="Logo" id="butlerpic">
 	 		</div>
 			<h1> BUTLER'S BEST ADVICE</h1>
-			<p>Dogs have no money. Isn’t that amazing? They’re broke their entire lives. But they get through. You know why dogs have no money? .. No Pockets.</p> 
+			<p id="advice">Dogs have no money. Isn’t that amazing? They’re broke their entire lives. But they get through. You know why dogs have no money? .. No Pockets.</p> 
 		</div>
 
-		<div class="boxed flying butlersays">
-			<div class="logobig">
-	 			<img class="pull-right" src="assets/img/logo_black.png" alt="Logo" id="butlerpic">
-	 		</div>
-			<h1> BUTLER'S BEST ADVICE</h1>
-			<p>Money is not the most important thing in the world. Love is. Fortunately, I love money.</p> 
-		</div>
-
-		<div class="boxed flying butlersays">
-			<div class="logobig">
-	 			<img class="pull-right" src="assets/img/logo_black.png" alt="Logo" id="butlerpic">
-	 		</div>
-			<h1> BUTLER'S BEST ADVICE</h1>
-			<p>October: This is one of the particularly dangerous months to invest in stocks. Other dangerous months are July, January, September, April, November, May, March, June, December, August and February.</p> 
-		</div>
-
-		<div class="boxed flying butlersays">
-			<div class="logobig">
-	 			<img class="pull-right" src="assets/img/logo_black.png" alt="Logo" id="butlerpic">
-	 		</div>
-			<h1> BUTLER'S BEST ADVICE</h1>
-			<p>Undermine the entire economic structure of society by leaving the pay toilet door ajar so the next person can get in free.</p> 
-		</div>
-
+		<button type="button" class="btn btn-primary btn-lg btn-block flying" onclick="changeAdvice()">GET OTHER ADVICE</button>
 	</div> <!-- end of page Advice -->
+
+	<!-- add expense Modal -->
+	<div class="modal fade" id="addExpenseModal" tabindex="-1" role="dialog" aria-labelledby="addExpenseLabel" aria-hidden="true">
+  		<div class="modal-dialog">
+  		  	<div class="modal-content">
+  		  	  	<div class="modal-header">
+  		  	    	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+  		  	    	<h4 class="modal-title" id="myModalLabel">ADD A NEW EXPENSE</h4>
+  		  	  	</div>
+
+  		  		<div class="modal-body">
+					<div id="entry-tabs">
+						<ul>
+							<li class="notImplemented"><i class="fa fa-microphone"></i><a href="#" title="dictate" id="dictate">SAY</a></li>
+							<li><i class="fa fa-pencil"></i><a href="#" title="write" id="write" class="activeOverview">WRITE</a></li>
+							<li class="notImplemented"><i class="fa fa-camera"></i><a href="#" title="photograph" id="photograph">PHOTO</a></li>
+						</ul>
+					</div>
+					<form class="form-horizontal" role="form">
+						<div class="form-group">
+							<label for="inputName" class="col-sm-2 control-label">Name</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" id="inputName" placeholder="Cat Food">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputPrice" class="col-sm-2 control-label">Price</label>
+							<div class="col-sm-10">
+								<input type="number" class="form-control" id="inputPrice" placeholder="12">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputCategory" class="col-sm-2 control-label">Category</label>
+							<div class="col-sm-10">
+								<select class="form-control" id="inputCategory" placeholder="FOOD">
+									<option value="0">Education</option>
+								  	<option value="1">Food</option>
+								  	<option value="2">Entertainment</option>
+								  	<option value="3">Transportation</option>
+								</select>
+							</div>
+						</div>
+						
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<div class="checkbox">
+									<label>
+										<input type="checkbox"> Repeat Expense
+									</label>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+
+				<div class="modal-footer">
+					<button class="btn btn-default" data-dismiss="modal">CLOSE <span class="glyphicon glyphicon-remove"></span></button>
+					<button onclick='addExpense()' class="btn btn-default">ADD <span class="glyphicon glyphicon-ok"></span></button>
+      			</div>
+	    	</div>
+	  	</div>
+	</div>
+
+	<!-- add category Modal -->
+	<div class="modal fade" id="addCategoryModal" tabindex="-1" role="dialog" aria-labelledby="addCategoryLabel" aria-hidden="true">
+  		<div class="modal-dialog">
+  		  	<div class="modal-content">
+  		  	  	<div class="modal-header">
+  		  	    	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+  		  	    	<h4 class="modal-title" id="myModalLabel">ADD A NEW CATEGORY</h4>
+  		  	  	</div>
+
+  		  		<div class="modal-body">
+					<form class="form-horizontal" role="form">
+						<div class="form-group">
+							<label for="inputName" class="col-sm-2 control-label">Name</label>
+							<div class="col-sm-10">
+								<input type="email" class="form-control" id="inputName" placeholder="Cat Food">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputPrice" class="col-sm-2 control-label">Price</label>
+							<div class="col-sm-10">
+								<input type="number" class="form-control" id="inputPrice" placeholder="12">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="inputCategory" class="col-sm-2 control-label">Category</label>
+							<div class="col-sm-10">
+								<select class="form-control" id="inputCategory" placeholder="FOOD">
+									<option>Education</option>
+								  	<option>Food</option>
+								  	<option>Entertainment</option>
+								  	<option>Transportation</option>
+								</select>
+							</div>
+						</div>
+						
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<div class="checkbox">
+									<label>
+										<input type="checkbox"> Repeat Expense
+									</label>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10 pull-right">
+								<button type="submit" class="btn btn-default">ADD <span class="glyphicon glyphicon-ok"></span></button>
+							</div>
+						</div>
+					</form>
+				</div>
+
+				<div class="modal-footer">
+      			</div>
+	    	</div>
+	  	</div>
+	</div>
+
+	<!-- function not implemented Modal -->
+	<div class="modal fade" id="notImplementedModal" tabindex="-1" role="dialog" aria-labelledby="notImplementedLabel" aria-hidden="true">
+  		<div class="modal-dialog">
+  		  	<div class="modal-content">
+  		  	  	<div class="modal-header">
+  		  	    	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+  		  	    	<h4 class="modal-title" id="myModalLabel">SORRY</h4>
+  		  	  	</div>
+  		  	<div class="modal-body">
+        		<p>The function you are trying to acces does not yet exist.</p>
+        		<p>A team of highly trained monkeys has been dispatched to deal with this situation</p>
+	      	</div>
+	      		<div class="modal-footer">
+	        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	      		</div>
+	    	</div>
+	  	</div>
+	</div>
 
 	<!-- HEADER -->
 	<div data-role="header" class="navbar navbar-default navbar-fixed-top" data-role="header">
