--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 					<p>SET YOUR BUDGET</p>
 					<div class="input-group">
-					  	<input type="text" id="inputBudget1" class="form-control listPrice" placeholder="120">
+					  	<input type="number" id="inputBudget1" class="form-control listPrice" placeholder="120">
 					  	<span class="input-group-addon">€</span>
 					</div>
 					<button type="button" class="btn btn-primary btn-lg btn-block flying notImplemented">SET</button>
@@ -252,7 +252,7 @@
 
 					<p>SET YOUR BUDGET</p>
 					<div class="input-group">
-					  	<input type="text" id="inputBudget1" class="form-control listPrice" placeholder="75">
+					  	<input type="number" id="inputBudget1" class="form-control listPrice" placeholder="75">
 					  	<span class="input-group-addon">€</span>
 					</div>
 					<button type="button" class="btn btn-primary btn-lg btn-block flying notImplemented">SET</button>					
@@ -282,7 +282,7 @@
 
 					<p>SET YOUR BUDGET</p>
 					<div class="input-group">
-					  	<input type="text" id="inputBudget1" class="form-control listPrice" placeholder="60">
+					  	<input type="number" id="inputBudget1" class="form-control listPrice" placeholder="60">
 					  	<span class="input-group-addon">€</span>
 					</div>
 					<button type="button" class="btn btn-primary btn-lg btn-block flying notImplemented">SET</button>						
@@ -312,7 +312,7 @@
 
 					<p>SET YOUR BUDGET</p>
 					<div class="input-group">
-					  	<input type="text" id="inputBudget1" class="form-control listPrice" placeholder="120">
+					  	<input type="number" id="inputBudget1" class="form-control listPrice" placeholder="120">
 					  	<span class="input-group-addon">€</span>
 					</div>
 					<button type="button" class="btn btn-primary btn-lg btn-block flying notImplemented">SET</button>					
@@ -326,7 +326,7 @@
 
 	<div class="container page" id="pageAdvice"><!-- page Advice -->
 			 	
-		<div class="boxed flying butlersays">
+		<div class="boxed butlersays">
 			<div class="logobig">
 	 			<img class="pull-right" src="assets/img/logo_black.png" alt="Logo" id="butlerpic">
 	 			<h1>HI, I AM JAMES,</h1>
@@ -335,7 +335,7 @@
 	 		</div>
 	 	</div>
 
-	 	<div class="boxed flying butlersays">
+	 	<div class="boxed flying butlersays" id="adviceBox">
 			<h1> MY ADVICE FOR YOU</h1>
 			<p id="advice">Dogs have no money. Isn’t that amazing? They’re broke their entire lives. But they get through. You know why dogs have no money? .. No Pockets.</p> 
 		</div>
