--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	      }, false);
 	</script>
 
-	<title>Budget Butler</title>
+	<title>refriendgerator</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet">
